force-app/main/default/objects/FA_Feature_Relationship__c/FA_Feature_Relationship__c.object-meta.xml
<CustomObject>
    <label>FA-Feature Relationship</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>FA-Feature Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FA-Feature Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>