force-app/main/default/objects/FA_Feature_Relationship__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Relationship End Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date</label>
    <type>Date</type>
</CustomField>