force-app/main/default/objects/FA_Feature_Relationship__c/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Associated feature</description>
    <label>Feature</label>
    <referenceTo>Feature__c</referenceTo>
    <relationshipLabel>FA-Feature Relationships</relationshipLabel>
    <relationshipName>FA_Feature_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>