force-app/main/default/objects/FA_Feature_Relationship__c/fields/Financial_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Associated financial account</description>
    <label>Financial Account</label>
    <referenceTo>FinServ__FinancialAccount__c</referenceTo>
    <relationshipLabel>FA-Feature Relationships</relationshipLabel>
    <relationshipName>FA_Feature_Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>