force-app/main/default/objects/FA_Feature_Relationship__c/fields/Financial_Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Financial_Account_Product__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Display the type of product the financial account is</description>
    <formula>Financial_Account__r.Product_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Account Product</label>
    <type>Text</type>
</CustomField>