force-app/main/default/objects/FA_Feature_Relationship__c/fields/Relationship_Key__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Key__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Unique identifier of the relationship</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Relationship Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>