force-app/main/default/objects/FA_Feature_Relationship__c/fields/Relationship_Status__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Status__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Status of the relationship</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Relationship Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>