force-app/main/default/objects/FA_Feature_Relationship__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_OCV</complianceGroup>
    <description>Relationship start date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>